@@ -127,9 +127,16 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>19</source>
+                  <target>19</target>
+                  <compilerArgs>
+                    <arg>--enable-preview</arg>
+                  </compilerArgs>
+              </configuration>
+          </plugin>
 		</plugins>
 	</build>
 </project>
